--- a/index.html
+++ b/index.html
@@ -4,10 +4,46 @@
         <title>bonjour</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
-        <h1>Bonjour !!!!</h1>
+        <div class="app">
+            <div class="top">
+                <p>Blablabla</p>
+            </div>
+            <div class="bottom">
+                <div class="chat-list">
+                    <div class="chat">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaPgZ8kVWpdSC0VSqPlEIn2l-X4EF8c_GcUw&usqp=CAU" alt="">
+                        <p>Le chat</p>
+                    </div>
+                    <div class="chat">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaPgZ8kVWpdSC0VSqPlEIn2l-X4EF8c_GcUw&usqp=CAU" alt="">
+                        <p>Le chat</p>
+                    </div>
+                    <div class="chat">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaPgZ8kVWpdSC0VSqPlEIn2l-X4EF8c_GcUw&usqp=CAU" alt="">
+                        <p>Le chat</p>
+                    </div>
+                    <div class="chat">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaPgZ8kVWpdSC0VSqPlEIn2l-X4EF8c_GcUw&usqp=CAU" alt="">
+                        <p>Le chat</p>
+                    </div>
+                    <div class="chat">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaPgZ8kVWpdSC0VSqPlEIn2l-X4EF8c_GcUw&usqp=CAU" alt="">
+                        <p>Le chat</p>
+                    </div>
+                    <div class="chat">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaPgZ8kVWpdSC0VSqPlEIn2l-X4EF8c_GcUw&usqp=CAU" alt="">
+                        <p>Le chat</p>
+                    </div>
+                    <div class="chat">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaPgZ8kVWpdSC0VSqPlEIn2l-X4EF8c_GcUw&usqp=CAU" alt="">
+                        <p>Le chat</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
